testdata/de/dm/intellij/bndtools/parser/BndHeaderParsersTest/testBundleVersionHighlighting/bnd.bnd
Bundle-Version: <error descr="invalid version \\"foo.bar\\": non-numeric \\"foo\\"">foo.bar</error>
